--- a/mod.config.json
+++ b/mod.config.json
@@ -1,9 +1,9 @@
 {
 	"name": "UnlimitedModding",
 	"author": "Kiobu",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"license": "MIT",
 	"src": {
-		"src/init.js": "TamperModLoad"
+		"src/init.js": "CacheModLoad"
 	}
 }
